contrast fix callouts

--- a/cinder/css/base.css
+++ b/cinder/css/base.css
@@ -26,7 +26,7 @@ div.source-links {
 /* info box styling, used for local version information. This should be deleted in final version */
 .tp-info-box {
     color: white;
-    background-color: #FF8C00;
+    background-color: #7e003b;
 }
 
 .link-hover-underline {
@@ -41,7 +41,11 @@ div.source-links {
 /* End Bootstrap Add-ons  */
 
 
-/* Start Bootstrap Callouts CSS Source by Chris Pratt (https://codepen.io/chrisdpratt/pen/IAymB) MIT License*/
+/*
+    Start Bootstrap Callouts CSS Source by Chris Pratt (https://codepen.io/chrisdpratt/pen/IAymB) MIT License
+    Edit by karol 2022-04-x MIT License
+*/
+
 .bs-callout {
     padding: 20px;
     margin: 20px 0;
@@ -76,7 +80,7 @@ div.source-links {
 }
 
 .bs-callout-default h4 {
-    color: #FA023C;
+    color: #A02121;
     /*modified from upstream default by Christopher Simpkins*/
 }
 
@@ -85,7 +89,7 @@ div.source-links {
 }
 
 .bs-callout-primary h4 {
-    color: #428bca;
+    color: #015490;
 }
 
 .bs-callout-success {
@@ -93,7 +97,7 @@ div.source-links {
 }
 
 .bs-callout-success h4 {
-    color: #5cb85c;
+    color: #245E37;
 }
 
 .bs-callout-danger {
@@ -101,7 +105,7 @@ div.source-links {
 }
 
 .bs-callout-danger h4 {
-    color: #d9534f;
+    color: #A02121;
 }
 
 .bs-callout-warning {
@@ -109,7 +113,7 @@ div.source-links {
 }
 
 .bs-callout-warning h4 {
-    color: #f0ad4e;
+    color: #913600;
 }
 
 .bs-callout-info {
@@ -117,9 +121,11 @@ div.source-links {
 }
 
 .bs-callout-info h4 {
-    color: #5bc0de;
+    color: #015490;
 }
 /* End Bootstrap Callouts CSS Source by Chris Pratt */
+
+
 
 /* Headerlinks */
 .headerlink {
@@ -135,6 +141,8 @@ h5:hover .headerlink,
 h6:hover .headerlink {
     display: inline-block;
 }
+
+
 
 /* Admonitions */
 .admonition {
@@ -160,7 +168,7 @@ h6:hover .headerlink {
 
 .admonition.note {
     /* csslint allow: adjoining-classes */
-    border-left-color: #428bca;
+    border-left-color: #5bc0de;
 }
 
 .admonition.warning {
@@ -182,13 +190,13 @@ h6:hover .headerlink {
 }
 
 .admonition.note>.admonition-title {
-    color: #428bca;
+    color: #015490;
 }
 
 .admonition.warning>.admonition-title {
-    color: #f0ad4e;
+    color: #913600;
 }
 
 .admonition.danger>.admonition-title {
-    color: #d9534f;
+    color: #A02121;
 }
